@@ -12,25 +12,41 @@
   - See the License for the specific language governing permissions and
   - limitations under the License.
 -->
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
-  <groupId>com.noctarius.discovery</groupId>
-  <artifactId>hazelcast-kubernetes-discovery</artifactId>
+  <groupId>com.hazelcast</groupId>
+  <artifactId>hazelcast-kubernetes</artifactId>
   <version>0.9.4-SNAPSHOT</version>
   <name>Kubernetes Discovery Plugin for Hazelcast</name>
   <description>Kubernetes Service Discovery for Hazelcast Discovery SPI</description>
-  <url>http://github.com/noctarius/hazelcast-kubernetes-discovery</url>
+  <url>http://github.com/hazelcast/hazelcast-kubernetes</url>
   <inceptionYear>2015</inceptionYear>
   <packaging>bundle</packaging>
 
   <properties>
+    <!-- needed for checkstyle/findbugs -->
+    <main.basedir>${project.basedir}</main.basedir>
+    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <timestamp>${maven.build.timestamp}</timestamp>
     <maven.build.timestamp.format>yyyy-MM-dd HH:mm</maven.build.timestamp.format>
+
+    <log4j.version>1.2.12</log4j.version>
+    <junit.version>4.12</junit.version>
 
     <hazelcast.version>3.7.4</hazelcast.version>
     <kubernetes-client.version>1.3.66</kubernetes-client.version>
     <dnsjava.version>2.1.7</dnsjava.version>
+
+    <maven.checkstyle.plugin.version>2.15</maven.checkstyle.plugin.version>
+    <maven.findbugs.plugin.version>3.0.1</maven.findbugs.plugin.version>
+    <maven.surefire.plugin.version>2.18.1</maven.surefire.plugin.version>
+    <maven.sonar.plugin.version>2.6</maven.sonar.plugin.version>
+    <maven.jacoco.plugin.version>0.7.4.201502262128</maven.jacoco.plugin.version>
+    <maven.javadoc.plugin.version>2.9</maven.javadoc.plugin.version>
+    <maven.gpg.plugin.version>1.4</maven.gpg.plugin.version>
   </properties>
 
 
@@ -48,9 +64,9 @@
   </distributionManagement>
 
   <scm>
-    <connection>scm:git:git://github.com/noctarius/hazelcast-kubernetes-discovery.git</connection>
-    <developerConnection>scm:git:git@github.com:noctarius/hazelcast-kubernetes-discovery.git</developerConnection>
-    <url>https://github.com/noctarius/hazelcast-kubernetes-discovery/</url>
+    <connection>scm:git:git://github.com/hazelcast/hazelcast-kubernetes.git</connection>
+    <developerConnection>scm:git:git@github.com:hazelcast/hazelcast-kubernetes.git</developerConnection>
+    <url>https://github.com/hazelcast/hazelcast-kubernetes/</url>
     <tag>HEAD</tag>
   </scm>
 
@@ -72,12 +88,12 @@
 
   <issueManagement>
     <system>github</system>
-    <url>https://github.com/noctarius/hazelcast-kubernetes-discovery/issues</url>
+    <url>https://github.com/hazelcast/hazelcast-kubernetes/issues</url>
   </issueManagement>
 
   <ciManagement>
     <system>Jenkins</system>
-    <url>https://noctarius.ci.cloudbees.com/job/hazelcast-kubernetes-discovery</url>
+    <url>https://hazelcast-l337.ci.cloudbees.com/job/Kubernetes-pr-builder/</url>
   </ciManagement>
 
   <dependencies>
@@ -96,6 +112,33 @@
       <artifactId>dnsjava</artifactId>
       <version>${dnsjava.version}</version>
     </dependency>
+    <dependency>
+      <groupId>com.google.code.findbugs</groupId>
+      <artifactId>annotations</artifactId>
+      <version>3.0.0</version>
+      <scope>provided</scope>
+    </dependency>
+    <dependency>
+      <groupId>com.hazelcast</groupId>
+      <artifactId>hazelcast</artifactId>
+      <scope>test</scope>
+      <version>${hazelcast.version}</version>
+      <classifier>tests</classifier>
+    </dependency>
+    <dependency>
+      <groupId>junit</groupId>
+      <artifactId>junit</artifactId>
+      <version>${junit.version}</version>
+      <scope>test</scope>
+      <optional>true</optional>
+    </dependency>
+    <dependency>
+      <groupId>log4j</groupId>
+      <artifactId>log4j</artifactId>
+      <version>${log4j.version}</version>
+      <scope>test</scope>
+      <optional>true</optional>
+    </dependency>
   </dependencies>
 
   <build>
@@ -108,7 +151,7 @@
         <configuration>
           <instructions>
             <Export-Package>
-              com.noctarius.hazelcast.kubernetes.*
+              com.hazelcast.kubernetes.*
             </Export-Package>
             <Import-Package>
               com.hazelcast.config,com.hazelcast.config.properties,
@@ -147,6 +190,8 @@
           <excludes>
             <exclude>README.adoc</exclude>
             <exclude>LICENSE</exclude>
+            <exclude>checkstyle/*</exclude>
+            <exclude>findbugs/*</exclude>
           </excludes>
         </configuration>
       </plugin>
@@ -176,10 +221,10 @@
             <configuration>
               <show>public</show>
               <sourceFileExcludes>
-                <exclude>com/noctarius/hazelcast/kubernetes/HazelcastKubernetesDiscoveryStrategyFactory.java</exclude>
+                <exclude>com/hazelcast/kubernetes/HazelcastKubernetesDiscoveryStrategyFactory.java</exclude>
               </sourceFileExcludes>
               <sourceFileIncludes>
-                <include>com/noctarius/hazelcast/kubernetes/*.java</include>
+                <include>com/hazelcast/kubernetes/*.java</include>
               </sourceFileIncludes>
               <detectJavaApiLink>true</detectJavaApiLink>
               <links>
@@ -200,8 +245,53 @@
           <checkinComment>Publishing javadoc for ${project.artifactId}:${project.version}</checkinComment>
           <content>${project.build.directory}/apidocs</content>
           <skipDeletedFiles>true</skipDeletedFiles>
-          <pubScmUrl>scm:git:git@github.com:noctarius/hazelcast-kubernetes-discovery.git</pubScmUrl>
+          <pubScmUrl>scm:git:git@github.com:hazelcast/hazelcast-kubernetes.git</pubScmUrl>
           <scmBranch>gh-pages</scmBranch>
+        </configuration>
+      </plugin>
+
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-checkstyle-plugin</artifactId>
+        <version>${maven.checkstyle.plugin.version}</version>
+        <executions>
+          <execution>
+            <phase>validate</phase>
+            <goals>
+              <goal>checkstyle</goal>
+            </goals>
+          </execution>
+        </executions>
+        <configuration>
+          <configLocation>${main.basedir}/checkstyle/checkstyle.xml</configLocation>
+          <suppressionsLocation>${main.basedir}/checkstyle/suppressions.xml</suppressionsLocation>
+          <headerLocation>${main.basedir}/checkstyle/ClassHeader.txt</headerLocation>
+          <enableRSS>false</enableRSS>
+          <linkXRef>true</linkXRef>
+          <consoleOutput>true</consoleOutput>
+          <failsOnError>true</failsOnError>
+          <failOnViolation>true</failOnViolation>
+          <includeTestSourceDirectory>false</includeTestSourceDirectory>
+          <enableRulesSummary>true</enableRulesSummary>
+          <propertyExpansion>main.basedir=${main.basedir}</propertyExpansion>
+        </configuration>
+      </plugin>
+
+      <plugin>
+        <groupId>org.codehaus.mojo</groupId>
+        <artifactId>findbugs-maven-plugin</artifactId>
+        <version>${maven.findbugs.plugin.version}</version>
+        <executions>
+          <execution>
+            <phase>compile</phase>
+            <goals>
+              <goal>check</goal>
+            </goals>
+          </execution>
+        </executions>
+        <configuration>
+          <failOnError>true</failOnError>
+          <excludeFilterFile>${main.basedir}/findbugs/findbugs-exclude.xml</excludeFilterFile>
         </configuration>
       </plugin>
     </plugins>
@@ -215,10 +305,10 @@
         <configuration>
           <show>public</show>
           <sourceFileExcludes>
-            <exclude>com/noctarius/hazelcast/kubernetes/HazelcastKubernetesDiscoveryStrategyFactory.java</exclude>
+            <exclude>com/hazelcast/kubernetes/HazelcastKubernetesDiscoveryStrategyFactory.java</exclude>
           </sourceFileExcludes>
           <sourceFileIncludes>
-            <include>com/noctarius/hazelcast/kubernetes/*.java</include>
+            <include>com/hazelcast/kubernetes/*.java</include>
           </sourceFileIncludes>
           <detectJavaApiLink>true</detectJavaApiLink>
           <links>
@@ -230,6 +320,174 @@
   </reporting>
 
   <profiles>
+    <profile>
+      <id>test-coverage</id>
+      <properties>
+        <argLine>
+          -Xms128m -Xmx1G -XX:MaxPermSize=128M
+          -Dhazelcast.version.check.enabled=false
+          -Dhazelcast.mancenter.enabled=false
+          -Dhazelcast.logging.type=none
+          -Dhazelcast.test.use.network=false
+        </argLine>
+      </properties>
+      <build>
+        <plugins>
+          <plugin>
+            <groupId>org.jacoco</groupId>
+            <artifactId>jacoco-maven-plugin</artifactId>
+            <version>${maven.jacoco.plugin.version}</version>
+          </plugin>
+
+          <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-surefire-plugin</artifactId>
+            <version>${maven.surefire.plugin.version}</version>
+            <configuration combine.self="override">
+              <redirectTestOutputToFile>true</redirectTestOutputToFile>
+              <testFailureIgnore>true</testFailureIgnore>
+            </configuration>
+          </plugin>
+        </plugins>
+      </build>
+    </profile>
+    <profile>
+      <id>release</id>
+      <properties>
+        <javadoc>true</javadoc>
+      </properties>
+      <build>
+        <plugins>
+          <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-gpg-plugin</artifactId>
+            <version>${maven.gpg.plugin.version}</version>
+            <executions>
+              <execution>
+                <id>sign-artifacts</id>
+                <phase>verify</phase>
+                <goals>
+                  <goal>sign</goal>
+                </goals>
+              </execution>
+            </executions>
+          </plugin>
+
+          <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-javadoc-plugin</artifactId>
+            <version>${maven.javadoc.plugin.version}</version>
+            <configuration>
+              <javaApiLinks>
+                <property>
+                  <name>api_1.6</name>
+                  <value>http://download.oracle.com/javase/1.6.0/docs/api/</value>
+                </property>
+                <property>
+                  <name>api_1.7</name>
+                  <value>http://download.oracle.com/javase/1.7.0/docs/api/</value>
+                </property>
+              </javaApiLinks>
+              <maxmemory>1024</maxmemory>
+            </configuration>
+            <executions>
+              <execution>
+                <id>attach-javadocs</id>
+                <goals>
+                  <goal>jar</goal>
+                </goals>
+              </execution>
+            </executions>
+          </plugin>
+
+          <plugin>
+            <groupId>org.sonatype.plugins</groupId>
+            <artifactId>nexus-staging-maven-plugin</artifactId>
+            <version>1.6.3</version>
+            <extensions>true</extensions>
+            <configuration>
+              <serverId>release-repository</serverId>
+              <nexusUrl>https://oss.sonatype.org/</nexusUrl>
+              <autoReleaseAfterClose>false</autoReleaseAfterClose>
+            </configuration>
+          </plugin>
+        </plugins>
+      </build>
+    </profile>
+    <profile>
+      <id>release-snapshot</id>
+      <properties>
+        <javadoc>true</javadoc>
+      </properties>
+      <build>
+        <plugins>
+          <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-javadoc-plugin</artifactId>
+            <version>${maven.javadoc.plugin.version}</version>
+            <configuration>
+              <javaApiLinks>
+                <property>
+                  <name>api_1.6</name>
+                  <value>http://download.oracle.com/javase/1.6.0/docs/api/</value>
+                </property>
+                <property>
+                  <name>api_1.7</name>
+                  <value>http://download.oracle.com/javase/1.7.0/docs/api/</value>
+                </property>
+              </javaApiLinks>
+              <excludePackageNames>
+                *.impl:*.internal:*.operations:*.proxy:*.util:com.hazelcast.aws.security:
+                *.handlermigration:*.client.connection.nio:*.client.console:*.buildutils:
+                *.client.protocol.generator:*.cluster.client:*.concurrent:*.collection:
+                *.nio.ascii:*.nio.ssl:*.nio.tcp:*.partition.client:*.transaction.client:
+                *.core.server:com.hazelcast.instance:com.hazelcast.PlaceHolder
+              </excludePackageNames>
+            </configuration>
+            <executions>
+              <execution>
+                <id>attach-javadocs</id>
+                <goals>
+                  <goal>jar</goal>
+                </goals>
+              </execution>
+            </executions>
+          </plugin>
+        </plugins>
+      </build>
+    </profile>
+    <profile>
+      <id>master</id>
+      <properties>
+        <hazelcast.version>3.8-SNAPSHOT</hazelcast.version>
+      </properties>
+      <dependencies>
+        <dependency>
+          <groupId>com.hazelcast</groupId>
+          <artifactId>hazelcast</artifactId>
+          <version>${hazelcast.version}</version>
+        </dependency>
+      </dependencies>
+      <build>
+        <plugins>
+          <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-surefire-plugin</artifactId>
+            <version>${maven.surefire.plugin.version}</version>
+            <configuration combine.self="override">
+              <parallel>none</parallel>
+              <redirectTestOutputToFile>true</redirectTestOutputToFile>
+              <argLine>-Xms128m -Xmx1G -XX:MaxPermSize=128M
+                -Dhazelcast.phone.home.enabled=false
+                -Dhazelcast.mancenter.enabled=false
+                -Dhazelcast.logging.type=none
+                -Dhazelcast.test.use.network=true
+              </argLine>
+            </configuration>
+          </plugin>
+        </plugins>
+      </build>
+    </profile>
     <profile>
       <id>release-sign-artifacts</id>
       <activation>
